# OME

./: .gitignore  Master.doxygen  README.md
Demos and Examples/: README.md
Demos and Examples/Simple SDP Model Demo/: OMEDemoHCoverage.csv  OMEDemoLineCoverage.csv  OMEDemoSquareCoverage.csv  OMEDemoTimeSeries.csv  Plates-H.spf  Plates-line.spf  Plates-square.spf  README.md  omeDemoModel.omem  omeDemoModel.sml  omeDemoModelH.omec  omeDemoModelLine.omec  omeDemoModelSquare.omec
Developer Notes/: CPP Serialization Details.xlsx  Error report system.xlsx  Instructions for running LRP models.txt  Lua Overview.xlsx  OME Event System.xlsx  OME Exceptions breakdown 07052016.xlsx  OMEObject Heirarchy 07052016.xlsx  SDP Heirarchy 07052016.xlsx  Value and record management 07142016.xlsx  Value and record management.xlsx
Docs/: Model Conversion Directives.docx  OMEAdapter Build Instructions.txt  Project Descriptions.docx  SDP Functions and Flags.docx  Simile Compatibility tables.xlsx  Simile Compatibility.docx  Where to go from here.docx  XML File Specs.docx  filespec tables.xlsx
Docs/XML Schemas/: commonTypes.xsd  omec.xsd  omem.xsd
extern_support/: README.md
extern_support/tinyxml2/: README.md
include/CSV-SDP/: CSVSpatialDataProvider.h
include/MainEntries/: MainUtils.h
include/OMEDraw/: BaseResultsDetails.h  DrawDetails.h  MultiValResultsDetails.h  ResultsDetailsMgr.h  TableResultsDetails.h  TreeResultsDetails.h
include/OMERuntime/: BaseEvalSerializer.h  BaseManager.h  BaseSpatialDataProvider.h  CPPLCAccumEntry.h  CPPLCSubEntry.h  CPPLoopCluster.h  CPPSerializer.h  CharType.h  CompiledInterface.h  CompiledMdlFuncs.h  CompiledMdlParser.h  CompiledMdlWrappers.h  DataSrc.h  DebugDefines.h  DebugOutput.h  DynamicTempArray.h  EnumRep.h  ErrCollection.h  EvalAlias.h  EvalXSetInterpTable.h  FileExts.h  HiResIntegrationBlock.h  ISpatialDataProvider.h  InitializerSet.h  LuaEvalSerializer.h  LuaFuncs.h  LuaHeaders.h  LuaMemPool.h  LuaOMEParser.h  MemPool.h  ModelEnum.h  OMEDefines.h  OMEEventTypes.h  OMEException.h  OMEIntegrationBlock.h  OMELib.h  OMELuaDefines.h  OMELuaFunc.h  OMEParser.h  RecordMgr.h  (+11 more)
include/OMERuntime/UpdateContainers/: DynamicUpArray.h  IndexJumpTable.h  ListDims.h  Listable.h  ShuffledList.h  SimpleArrayWrapper.h  StaticUpArray.h  TempPoolArray.h  TempVCArray.h  UpdateContainers.h
include/OMERuntime/events/: CentralEvent.h  CentralEventDispatcher.h  Eventable.h  OMEEvent.h
include/OMERuntime/omeobjects/: AssocPort.h  Conveyor.h  EvalInterpTable.h  EvalTable.h  Evaluable.h  Flow.h  (+27 more)
include/UniversalConverter/: ConverterUtils.h  ModelFileParser.h  ModifierProcessor.h
project_files/Linux/: CMakeLists.txt  Default.doxygen
project_files/Linux/CSVSpatialDataProvider/: CMakeLists.txt
project_files/Linux/ModelClassBuilder/: CMakeLists.txt
project_files/Linux/ModelProject/: MdlClassInclude.h  ModelProject.cpp  ModelProject.h  OMEMdlMakefile.mk  TestModel.cpp  TestModel.h
project_files/Linux/OMEDraw/: CMakeLists.txt
project_files/Linux/OMEEngine/: CMakeLists.txt
project_files/Linux/OMERuntime/: CMakeLists.txt
project_files/Linux/UniversalConverter/: CMakeLists.txt
project_files/OS_X/: Default.doxygen
project_files/Windows/: Default.doxygen  Lua.props  LuaJIT.props  OME.APS  OME.reg  OME.sln  ReadMe.txt
src/CSV-SDP/: CSVSpatialDataProvider.cpp
src/MainEntries/: ModelClassBuilder.cpp  OMEEngine.cpp  UniversalConverter.cpp
src/OMEDraw/: BaseResultsDetails.cpp  DrawDetails.cpp  MultiValResultsDetails.cpp  ResultsDetailsMgr.cpp  TableResultsDetails.cpp  TreeResultsDetails.cpp
src/OMERuntime/: BaseEvalSerializer.cpp  BaseManager.cpp  BaseSpatialDataProvider.cpp  CPPLCAccumEntry.cpp  CPPLCSubEntry.cpp  CPPLoopCluster.cpp  CPPSerializer.cpp  CompiledMdlFuncs.cpp  CompiledMdlParser.cpp  CompiledMdlWrappers.cpp  DataSrc.cpp  DebugOutput.cpp  ErrCollection.cpp  EvalAlias.cpp  EvalXSetInterpTable.cpp  HiResIntegrationBlock.cpp  InitializerSet.cpp  LuaEvalSerializer.cpp  LuaMemPool.cpp  LuaOMEParser.cpp  ModelEnum.cpp  OMEDefines.cpp  OMEException.cpp  OMEIntegrationBlock.cpp  OMELuaDefines.cpp  OMELuaFunc.cpp  OMEParser.cpp  RecordMgr.cpp  SDPMapEntry.cpp  SDPMapSubEntry.cpp  SimManager.cpp  Summarizable.cpp  Units.cpp  ValueArchive.cpp
src/UniversalConverter/: ConverterUtils.cpp  ModifierProcessor.cpp
src/Windows/: stdafx.cpp
unitTests/: README.txt  Test methods checklist.csv  TestProfileDescription.txt  UTContainers.py  UTFactories.py  runUnitTests.py  runtests.cmd  testResults.txt  to be tested.txt
unitTests/temp_files/: base_math__-0_1__1_9__2_2__.csv  base_math__-0_2__1_8__2_3__.csv  base_math__-0_3__1_7__2_4__.csv  base_math__-0_4__1_6__2_5__.csv  base_math__-0_5__1_5__2_6__.csv  base_math__-0_6__1_4__2_7__.csv  base_math__-0_7__1_3__2_8__.csv  base_math__-0_8__1_2__2_9__.csv  base_math__-0_9__1_1__3__.csv  base_math__-1__1__3_1__.csv  base_math__0_1__2_1__2__.csv  base_math__0_2__2_2__1_9__.csv  base_math__0_3__2_3__1_8__.csv  base_math__0_4__2_4__1_7__.csv  base_math__0_5__2_5__1_6__.csv  base_math__0_6__2_6__1_5__.csv  base_math__0_7__2_7__1_4__.csv  base_math__0_8__2_8__1_3__.csv  base_math__0_9__2_9__1_2__.csv  base_math__0__2__2_1__.csv  base_math__1__3__1_1__.csv  conditionals__5__3__0__0__.csv  conditionals__5__3__0__1__.csv  conditionals__5__3__1__0__.csv  conditionals__5__3__1__1__.csv  delays__1__1__4__.csv  delays__1__1__5__.csv  delays__1__2__4__.csv  delays__1__2__5__.csv  delays__2__1__4__.csv  delays__2__1__5__.csv  delays__2__2__4__.csv  delays__2__2__5__.csv  initial_condition__1__1__.csv  initial_condition__1__2__.csv  initial_condition__2__1__.csv  initial_condition__2__2__.csv  integrals_euler__0__0__0__1__.csv  integrals_euler__1__0__1__1__.csv  integrals_euler__1__1__2__1__.csv  (+17 more)
unitTests/test_models/: base_math.omem  conditionals.omem  delays.omem  initial_condition.omem  integrals.omem  misc_signals.omem  randoms_partial.omem  smooths.omem
unitTests/testing_profiles/: base_math.txt  conditionals.txt  delays.txt  initial_condition.txt  integrals_euler.txt  integrals_rk4.txt  misc_signals.txt  smooths.txt
(+427 files in other folders)
